; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/tools/extr_pdfshow.c_showtrailer.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/tools/extr_pdfshow.c_showtrailer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@tight = common dso_local global i64 0, align 8
@ctx = common dso_local global i32 0, align 4
@out = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [9 x i8] c"trailer \00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"trailer\0A\00", align 1
@doc = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @showtrailer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @showtrailer() #0 {
  %1 = load i64, i64* @tight, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %7

3:                                                ; preds = %0
  %4 = load i32, i32* @ctx, align 4
  %5 = load i32, i32* @out, align 4
  %6 = call i32 @fz_write_printf(i32 %4, i32 %5, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  br label %11

7:                                                ; preds = %0
  %8 = load i32, i32* @ctx, align 4
  %9 = load i32, i32* @out, align 4
  %10 = call i32 @fz_write_printf(i32 %8, i32 %9, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0))
  br label %11

11:                                               ; preds = %7, %3
  %12 = load i32, i32* @ctx, align 4
  %13 = load i32, i32* @out, align 4
  %14 = load i32, i32* @ctx, align 4
  %15 = load i32, i32* @doc, align 4
  %16 = call i32 @pdf_trailer(i32 %14, i32 %15)
  %17 = load i64, i64* @tight, align 8
  %18 = call i32 @pdf_print_obj(i32 %12, i32 %13, i32 %16, i64 %17, i32 1)
  %19 = load i32, i32* @ctx, align 4
  %20 = load i32, i32* @out, align 4
  %21 = call i32 @fz_write_printf(i32 %19, i32 %20, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0))
  ret void
}

declare dso_local i32 @fz_write_printf(i32, i32, i8*) #1

declare dso_local i32 @pdf_print_obj(i32, i32, i32, i64, i32) #1

declare dso_local i32 @pdf_trailer(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
